# libsdf

./: CMakeLists.txt  LICENSE  LibsdfConfig.cmake.in  README.md
include/: libsdf.h  sdf.h
src/: libsdf.cpp  main.cpp  sdf.cpp
